--- a/DiplomObsAlarm/MainPage.xaml
+++ b/DiplomObsAlarm/MainPage.xaml
@@ -62,6 +62,24 @@ HorizontalOptions="Center">
             </Border>
 
         </Grid>
+        <Grid>
+            <Label
+                Margin="30,20,30,0"
+                Text="Админ - отправляет уведомления о различных угрозах, а пользователи их получают"
+                FontSize="20"
+                />
+            <Label
+                Margin="30,130,30,0"
+                Text="Пользователь - получает уведомления."
+                FontSize="20"/>
+            <Label
+                Text="Приложение созданно в целях безопасности студентов и 
+работников, проживающих и работающих в общежитии,
+для сообщения о различных угрозах, тем кто находится 
+в общежитии и за ее пределами, для большей безопасности"
+                FontSize="10"
+                Margin="30,400,30,0"/>
+        </Grid>
     </VerticalStackLayout>
 
 </ContentPage>
