--- a/DiplomObsAlarm/MainPage.xaml
+++ b/DiplomObsAlarm/MainPage.xaml
@@ -2,84 +2,94 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DiplomObsAlarm.MainPage">
-    <VerticalStackLayout>
-        <Image Source="logo.png"
-               Margin="20"
-                   HeightRequest="41"
-                   HorizontalOptions="Start"/>
-        <Label Text="Выберите вашу роль"
-               HorizontalOptions="Center"
-               FontSize="18"
-               FontAttributes="Bold"/>
-        <Grid
-            Padding="20"
-            RowDefinitions="auto,auto"
-            ColumnDefinitions="* ,* "
-            VerticalOptions="Start"
-            HorizontalOptions="Fill">
-            <Border 
-                
-Stroke="Black"
-Background="Black"
-            Grid.Row="0" Grid.Column="0"
-            HorizontalOptions="Center">
-                <Border.StrokeShape>
-                    <RoundRectangle CornerRadius="60" />
-                </Border.StrokeShape>
-                <ImageButton 
-                Clicked="OnAdminClicked"
-                Source="admin.png"
-                WidthRequest="70"
-                HeightRequest="70"
-                />
-            </Border>
-            <Label
-                Grid.Row="1"
-                Grid.Column="0"
-                Text="Админ"
+<!--  кароче тут авто пружинка и авто, * работает как пружинка, она занимает то че дает. авто делает так, чтобы занимало столько сколько нужно-->
+    <Grid RowDefinitions="Auto, *, Auto">
+        <VerticalStackLayout 
+            Grid.Row="0"
+            Margin="20"
+            Spacing="20">
+            <!--logo-->
+            <Image 
+                Source="logo.png"
+                HeightRequest="41"
+                HorizontalOptions="Start" />
+            <!--role-->
+            <Label 
+                Text="Выберите вашу роль"
                 HorizontalOptions="Center"
-                />
-            <Label
-                Grid.Row="1"
-                Grid.Column="1"
-                Text="Пользователь"
-                HorizontalOptions="Center"
-                />
-            <Border 
-Grid.Row="0" Grid.Column="1"
-Stroke="Black"
-Background="Black"
-HorizontalOptions="Center">
-                <Border.StrokeShape>
-                    <RoundRectangle CornerRadius="60" />
-                </Border.StrokeShape>
-                <ImageButton 
-                    Clicked="OnUserClicked"
-    Source="user.png"
-    WidthRequest="70"
-    HeightRequest="70"
-    />
-            </Border>
+                FontSize="18"
+                FontAttributes="Bold" />
+            <!--Button-->
+            <Grid ColumnDefinitions="*,*" RowDefinitions="Auto,Auto">
+                <!--admin-->
+                <Border
+                    Stroke="Black"
+                    Background="Black"
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    HorizontalOptions="Center">
+                    <Border.StrokeShape>
+                        <RoundRectangle CornerRadius="60"/>
+                    </Border.StrokeShape>
+                    <ImageButton
+                        Clicked="OnAdminClicked"
+                        Source="admin.png"
+                        WidthRequest="70"
+                        HeightRequest="70"/>
+                </Border>
 
-        </Grid>
-        <Grid>
-            <Label
-                Margin="30,20,30,0"
-                Text="Админ - отправляет уведомления о различных угрозах, а пользователи их получают"
-                FontSize="20"
-                />
-            <Label
-                Margin="30,130,30,0"
-                Text="Пользователь - получает уведомления."
-                FontSize="20"/>
-            <Label
-                Text="Приложение созданно в целях безопасности студентов и 
-работников, проживающих и работающих в общежитии,
-для сообщения о различных угрозах, тем кто находится 
-в общежитии и за ее пределами, для большей безопасности"
-                FontSize="10"
-                Margin="30,400,30,0"/>
-        </Grid>
-    </VerticalStackLayout>
+                <!--user-->
+                <Border 
+                    Stroke="Black"
+                    Background="Black"
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    HorizontalOptions="Center">
+                    <Border.StrokeShape>
+                        <RoundRectangle CornerRadius="60"/>
+                    </Border.StrokeShape>
+                    <ImageButton
+                        Clicked="OnUserClicked"
+                        Source="user.png"
+                        WidthRequest="70"
+                        HeightRequest="70"/>
+                </Border>
 
+                <!--text-->
+                <Label
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Text="Админ"
+                    HorizontalOptions="Center" />
+
+                <Label 
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Text="Пользователь"
+                    HorizontalOptions="Center" />
+            </Grid>
+
+            <!--info-->
+            <Label
+                Text="Админ - отправляет уведомления о различных угрозах, а пользователь получает их."
+                FontSize="16"
+                HorizontalTextAlignment="Start" />
+
+            <Label
+                Text="Пользователь - Получает уведомления."
+                FontSize="16"
+                HorizontalTextAlignment="Start" />
+        </VerticalStackLayout>
+        <!--nicego-->
+        <!--row 1 == pusto >>> pruzjinka-->
+        <!-- futer >>> snizu prizjat -->
+        <Label
+            Grid.Row="2"
+            Text="Приложение создано в целях безопасности студентов и работников, проживающих и работающих в общежитии, для сообщения о различных угрозах, тем кто находится в общежитии и за её пределами, для большей безопасности."
+            FontSize="10"
+            Margin="20"
+            HorizontalTextAlignment="Center"
+            VerticalOptions="End" />
+
+    </Grid>
 </ContentPage>
