КАРОЧЕ ТУТ НАХУЙ НОВАЯ РАЗМЕТКА ЧЕРЕЗ C# И ОБРАЩЕНИЕ К НЕМУ ИЗ НУЖНЫХ ОКОН

--- a/DiplomObsAlarm/AdminEnterPage.xaml
+++ b/DiplomObsAlarm/AdminEnterPage.xaml
@@ -3,113 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DiplomObsAlarm.AdminEnterPage"
              Title="AdminEnterPage">
-    <Grid RowDefinitions="Auto, *, Auto">
-        <VerticalStackLayout 
-            Grid.Row="0"
-            Margin="20"
-            Spacing="20">
-            <!--кароче надо разделить на квадратки и заполнять как картинку по номерам-->
-            <!--logo-->
-            <Image 
-                Source="logo.png"
-                HeightRequest="41"
-                HorizontalOptions="Start" />
-            <!--role-->
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Label 
-                    Grid.Column="1"
-                    Grid.ColumnSpan="4"
-                    Grid.Row="0"
-                Text="Для входа в панель администратора вам нужно ввести ваш логин и пароль."
-                HorizontalOptions="Center"
-                FontSize="18"
-                FontAttributes="Bold" />
-            </Grid>
-            <Grid RowDefinitions="auto,auto">
-                <Entry 
-                    x:Name="login"
-                    Grid.Row="0"
-                    Placeholder="Введите логин"
-                    FontSize="20"
-                    MaxLength="20"/>
-                <Entry 
-                    x:Name="password"
-                    Grid.Row="1"
-                    Placeholder="Введите пароль"
-                    FontSize="20"
-                    MaxLength="20"/>
-            </Grid>
-
-
-            <!--Button-->
-            <Grid ColumnDefinitions="*,*" RowDefinitions="Auto,Auto">
-                <!--admin-->
-                <Border
-                    Stroke="Black"
-                    Background="Black"
-                    Grid.Row="0"
-                    Grid.Column="0"
-                    HorizontalOptions="Center">
-                    <Border.StrokeShape>
-                        <RoundRectangle CornerRadius="60"/>
-                    </Border.StrokeShape>
-                    <ImageButton
-                        Clicked="OnAdminClicked"
-                        Source="admin.png"
-                        WidthRequest="70"
-                        HeightRequest="70"/>
-                </Border>
-
-                <!--user-->
-                <Border 
-                    Stroke="Black"
-                    Background="Black"
-                    Grid.Row="0"
-                    Grid.Column="1"
-                    HorizontalOptions="Center">
-                    <Border.StrokeShape>
-                        <RoundRectangle CornerRadius="60"/>
-                    </Border.StrokeShape>
-                    <ImageButton
-                        Clicked="OnUserClicked"
-                        Source="user.png"
-                        WidthRequest="70"
-                        HeightRequest="70"/>
-                </Border>
-            </Grid>
-
-            <!--info-->
-            <Label
-                Text="Админ - отправляет уведомления о различных угрозах, а пользователь получает их."
-                FontSize="16"
-                HorizontalTextAlignment="Start" />
-
-            <Label
-                Text="Пользователь - Получает уведомления."
-                FontSize="16"
-                HorizontalTextAlignment="Start" />
-        </VerticalStackLayout>
-        <!--nicego-->
-        <!--row 1 == pusto >>> pruzjinka-->
-        <!-- futer >>> snizu prizjat -->
-        <Label
-            Grid.Row="2"
-            Text="Приложение создано в целях безопасности студентов и работников, проживающих и работающих в общежитии, для сообщения о различных угрозах, тем кто находится в общежитии и за её пределами, для большей безопасности."
-            FontSize="10"
-            Margin="20"
-            HorizontalTextAlignment="Center"
-            VerticalOptions="End" />
-
+    <Grid x:Name="GeneralSetting">
+        <Label Text="GKJDFOg" Grid.Column="0" Grid.Row="3" Grid.RowSpan="3"/>
+        <Label Text="ppp" Grid.Row="0" Grid.Column="10" Grid.RowSpan="2"/>
     </Grid>
 </ContentPage>
