--- a/DiplomObsAlarm/MainPage.xaml
+++ b/DiplomObsAlarm/MainPage.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DiplomObsAlarm.MainPage">
-<!--  кароче тут авто пружинка и авто, * работает как пружинка, она занимает то че дает. авто делает так, чтобы занимало столько сколько нужно-->
+<!--Содзать функцию в отдельном классе, для рисования этих столбцов и колонок, а потом обращаться к функции в коде и брать разметку из нее
+    
+    кароче тут авто пружинка и авто, * работает как пружинка, она занимает то че дает. авто делает так, чтобы занимало столько сколько нужно-->
     <Grid RowDefinitions="Auto, *, Auto">
         <VerticalStackLayout 
             Grid.Row="0"
